feat:优化captcha模块
