# api/openapi/swagger.json
@@ -18,9 +18,9 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/mock": {
-            "get": {
-                "description": "根据查询参数获取Mock列表，返回当前页数据和total数量",
+        "/captcha": {
+            "post": {
+                "description": "创建新的验证码",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,9 +28,129 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mock"
+                    "captcha"
                 ],
-                "summary": "获取 Mock 列表",
+                "summary": "生成验证码",
+                "parameters": [
+                    {
+                        "enum": [
+                            "image:click"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "WayImageClick"
+                        ],
+                        "name": "way",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功创建验证码",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.successResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.CaptchaResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.invalidParamsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/captcha/with-answer": {
+            "get": {
+                "description": "创建新的验证码并返回答案（仅用于测试或开发环境）",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "captcha"
+                ],
+                "summary": "生成带答案的验证码",
+                "parameters": [
+                    {
+                        "enum": [
+                            "image:click"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "WayImageClick"
+                        ],
+                        "name": "way",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功创建验证码并返回答案",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.successResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.CaptchaAnswerResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.invalidParamsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/test": {
+            "get": {
+                "description": "根据查询参数获取Test列表，返回当前页数据和total数量",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "获取 Test 列表",
                 "parameters": [
                     {
                         "type": "string",
@@ -55,7 +175,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Mock列表",
+                        "description": "Test列表",
                         "schema": {
                             "allOf": [
                                 {
@@ -65,7 +185,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handler.MockListResponse"
+                                            "$ref": "#/definitions/handler.TestListResponse"
                                         }
                                     }
                                 }
@@ -92,7 +212,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "创建新的 Mock",
+                "description": "创建新的 Test",
                 "consumes": [
                     "application/json"
                 ],
@@ -100,23 +220,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mock"
+                    "test"
                 ],
-                "summary": "创建 Mock",
+                "summary": "创建 Test",
                 "parameters": [
                     {
-                        "description": "创建 Mock 请求",
+                        "description": "创建 Test 请求",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/scaffold_internal_mock_handler.CreateRequest"
+                            "$ref": "#/definitions/handler.CreateRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "成功创建 Mock",
+                        "description": "成功创建 Test",
                         "schema": {
                             "allOf": [
                                 {
@@ -126,7 +246,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handler.MockResponse"
+                                            "$ref": "#/definitions/handler.TestResponse"
                                         }
                                     }
                                 }
@@ -148,14 +268,14 @@
                 }
             }
         },
-        "/mock/{id}": {
+        "/test/{id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "读取单条 Mock",
+                "description": "读取单条 Test",
                 "consumes": [
                     "application/json"
                 ],
@@ -163,13 +283,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mock"
+                    "test"
                 ],
-                "summary": "读取单条 Mock",
+                "summary": "读取单条 Test",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Mock ID",
+                        "description": "Test ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -177,7 +297,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "成功创建 Mock",
+                        "description": "成功创建 Test",
                         "schema": {
                             "allOf": [
                                 {
@@ -187,7 +307,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handler.MockResponse"
+                                            "$ref": "#/definitions/handler.TestResponse"
                                         }
                                     }
                                 }
@@ -214,7 +334,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "根据ID更新 Mock 信息",
+                "description": "根据ID更新 Test 信息",
                 "consumes": [
                     "application/json"
                 ],
@@ -222,30 +342,30 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mock"
+                    "test"
                 ],
-                "summary": "更新 Mock",
+                "summary": "更新 Test",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Mock ID",
+                        "description": "Test ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "更新 Mock 请求",
+                        "description": "更新 Test 请求",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/scaffold_internal_mock_handler.UpdateRequest"
+                            "$ref": "#/definitions/handler.UpdateRequest"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "成功更新 Mock",
+                        "description": "成功更新 Test",
                         "schema": {
                             "allOf": [
                                 {
@@ -255,7 +375,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handler.MockResponse"
+                                            "$ref": "#/definitions/handler.TestResponse"
                                         }
                                     }
                                 }
@@ -282,7 +402,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "根据ID删除 Mock",
+                "description": "根据ID删除 Test",
                 "consumes": [
                     "application/json"
                 ],
@@ -290,13 +410,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mock"
+                    "test"
                 ],
-                "summary": "删除 Mock",
+                "summary": "删除 Test",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Mock ID",
+                        "description": "Test ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -304,7 +424,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "成功删除 Mock",
+                        "description": "成功删除 Test",
                         "schema": {
                             "$ref": "#/definitions/response.successResponse"
                         }
@@ -326,13 +446,86 @@
         }
     },
     "definitions": {
-        "handler.MockListResponse": {
+        "domain.VerifyWay": {
+            "type": "string",
+            "enum": [
+                "image:click"
+            ],
+            "x-enum-varnames": [
+                "WayImageClick"
+            ]
+        },
+        "handler.CaptchaAnswerResponse": {
+            "type": "object",
+            "properties": {
+                "audio": {
+                    "description": "音频验证码",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "image": {
+                    "description": "主图片",
+                    "type": "string"
+                },
+                "thumb": {
+                    "description": "缩略图",
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                },
+                "way": {
+                    "$ref": "#/definitions/domain.VerifyWay"
+                }
+            }
+        },
+        "handler.CaptchaResponse": {
+            "type": "object",
+            "properties": {
+                "audio": {
+                    "description": "音频验证码",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "image": {
+                    "description": "主图片",
+                    "type": "string"
+                },
+                "thumb": {
+                    "description": "缩略图",
+                    "type": "string"
+                }
+            }
+        },
+        "handler.CreateRequest": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 60
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 30
+                }
+            }
+        },
+        "handler.TestListResponse": {
             "type": "object",
             "properties": {
                 "list": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handler.MockResponse"
+                        "$ref": "#/definitions/handler.TestResponse"
                     }
                 },
                 "total": {
@@ -340,7 +533,7 @@
                 }
             }
         },
-        "handler.MockResponse": {
+        "handler.TestResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -360,6 +553,22 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.UpdateRequest": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 60
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 30
                 }
             }
         },
@@ -406,38 +615,6 @@
                 "message": {
                     "type": "string",
                     "example": "请求成功"
-                }
-            }
-        },
-        "scaffold_internal_mock_handler.CreateRequest": {
-            "type": "object",
-            "required": [
-                "title"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 60
-                },
-                "title": {
-                    "type": "string",
-                    "maxLength": 30
-                }
-            }
-        },
-        "scaffold_internal_mock_handler.UpdateRequest": {
-            "type": "object",
-            "required": [
-                "title"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 60
-                },
-                "title": {
-                    "type": "string",
-                    "maxLength": 30
                 }
             }
         }
